--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <li class="priority-item">
               <div class="icon-wrapper">
                 <svg class="priority-icon" width="64" height="64">
-                  <use href="./images/icons.svg#icon-antenna"></use>
+                  <use href="./images/icon.svg#icon-antenna"></use>
                 </svg>
               </div>
               <h3 class="priority-title title">Strategy</h3>
@@ -84,7 +84,7 @@
             <li class="priority-item">
               <div class="icon-wrapper">
                 <svg class="priority-icon" width="64" height="64">
-                  <use href="./images/icons.svg#icon-clock"></use>
+                  <use href="./images/icon.svg#icon-clock"></use>
                 </svg>
               </div>
               <h3 class="priority-title title">Punctuality</h3>
@@ -96,7 +96,7 @@
             <li class="priority-item">
               <div class="icon-wrapper">
                 <svg class="priority-icon" width="64" height="64">
-                  <use href="./images/icons.svg#icon-diagram"></use>
+                  <use href="./images/icon.svg#icon-diagram"></use>
                 </svg>
               </div>
               <h3 class="priority-title title">Diligence</h3>
@@ -108,7 +108,7 @@
             <li class="priority-item">
               <div class="icon-wrapper">
                 <svg class="priority-icon" width="64" height="64">
-                  <use href="./images/icons.svg#icon-astronaut"></use>
+                  <use href="./images/icon.svg#icon-astronaut"></use>
                 </svg>
               </div>
               <h3 class="priority-title title">Technologies</h3>
@@ -178,10 +178,11 @@
                         class="socials-link link"
                         href="https://www.instagram.com/"
                         rel="noopener noreferer"
+                        target="_blank"
                         aria-label="instagram"
                       >
                         <svg class="socials-icon" width="16" height="16">
-                          <use href="./images/icons.svg#icon-instagram"></use>
+                          <use href="./images/icon.svg#icon-instagram"></use>
                         </svg>
                       </a>
                     </li>
@@ -190,10 +191,11 @@
                         class="socials-link link"
                         href="https://twitter.com/"
                         rel="noopener noreferer"
+                        target="_blank"
                         aria-label="twitter"
                       >
                         <svg class="socials-icon" width="16" height="16">
-                          <use href="./images/icons.svg#icon-twitter"></use>
+                          <use href="./images/icon.svg#icon-twitter"></use>
                         </svg>
                       </a>
                     </li>
@@ -202,10 +204,11 @@
                         class="socials-link link"
                         href="https://www.facebook.com/"
                         rel="noopener noreferer"
+                        target="_blank"
                         aria-label="facebook"
                       >
                         <svg class="socials-icon" width="16" height="16">
-                          <use href="./images/icons.svg#icon-facebook"></use>
+                          <use href="./images/icon.svg#icon-facebook"></use>
                         </svg>
                       </a>
                     </li>
@@ -214,10 +217,11 @@
                         class="socials-link link"
                         href="https://www.linkedin.com/"
                         rel="noopener noreferer"
+                        target="_blank"
                         aria-label="linkedin"
                       >
                         <svg class="socials-icon" width="16" height="16">
-                          <use href="./images/icons.svg#icon-linkedin"></use>
+                          <use href="./images/icon.svg#icon-linkedin"></use>
                         </svg>
                       </a>
                     </li>
@@ -241,10 +245,11 @@
                         class="socials-link link"
                         href="https://www.instagram.com/"
                         rel="noopener noreferer"
+                        target="_blank"
                         aria-label="instagram"
                       >
                         <svg class="socials-icon" width="16" height="16">
-                          <use href="./images/icons.svg#icon-instagram"></use>
+                          <use href="./images/icon.svg#icon-instagram"></use>
                         </svg>
                       </a>
                     </li>
@@ -253,10 +258,11 @@
                         class="socials-link link"
                         href="https://twitter.com/"
                         rel="noopener noreferer"
+                        target="_blank"
                         aria-label="twitter"
                       >
                         <svg class="socials-icon" width="16" height="16">
-                          <use href="./images/icons.svg#icon-twitter"></use>
+                          <use href="./images/icon.svg#icon-twitter"></use>
                         </svg>
                       </a>
                     </li>
@@ -265,10 +271,11 @@
                         class="socials-link link"
                         href="https://www.facebook.com/"
                         rel="noopener noreferer"
+                        target="_blank"
                         aria-label="facebook"
                       >
                         <svg class="socials-icon" width="16" height="16">
-                          <use href="./images/icons.svg#icon-facebook"></use>
+                          <use href="./images/icon.svg#icon-facebook"></use>
                         </svg>
                       </a>
                     </li>
@@ -277,10 +284,11 @@
                         class="socials-link link"
                         href="https://www.linkedin.com/"
                         rel="noopener noreferer"
+                        target="_blank"
                         aria-label="linkedin"
                       >
                         <svg class="socials-icon" width="16" height="16">
-                          <use href="./images/icons.svg#icon-linkedin"></use>
+                          <use href="./images/icon.svg#icon-linkedin"></use>
                         </svg>
                       </a>
                     </li>
@@ -304,10 +312,11 @@
                         class="socials-link link"
                         href="https://www.instagram.com/"
                         rel="noopener noreferer"
+                        target="_blank"
                         aria-label="instagram"
                       >
                         <svg class="socials-icon" width="16" height="16">
-                          <use href="./images/icons.svg#icon-instagram"></use>
+                          <use href="./images/icon.svg#icon-instagram"></use>
                         </svg>
                       </a>
                     </li>
@@ -316,10 +325,11 @@
                         class="socials-link link"
                         href="https://twitter.com/"
                         rel="noopener noreferer"
+                        target="_blank"
                         aria-label="twitter"
                       >
                         <svg class="socials-icon" width="16" height="16">
-                          <use href="./images/icons.svg#icon-twitter"></use>
+                          <use href="./images/icon.svg#icon-twitter"></use>
                         </svg>
                       </a>
                     </li>
@@ -328,10 +338,11 @@
                         class="socials-link link"
                         href="https://www.facebook.com/"
                         rel="noopener noreferer"
+                        target="_blank"
                         aria-label="facebook"
                       >
                         <svg class="socials-icon" width="16" height="16">
-                          <use href="./images/icons.svg#icon-facebook"></use>
+                          <use href="./images/icon.svg#icon-facebook"></use>
                         </svg>
                       </a>
                     </li>
@@ -340,10 +351,11 @@
                         class="socials-link link"
                         href="https://www.linkedin.com/"
                         rel="noopener noreferer"
+                        target="_blank"
                         aria-label="linkedin"
                       >
                         <svg class="socials-icon" width="16" height="16">
-                          <use href="./images/icons.svg#icon-linkedin"></use>
+                          <use href="./images/icon.svg#icon-linkedin"></use>
                         </svg>
                       </a>
                     </li>
@@ -367,10 +379,11 @@
                         class="socials-link link"
                         href="https://www.instagram.com/"
                         rel="noopener noreferer"
+                        target="_blank"
                         aria-label="instagram"
                       >
                         <svg class="socials-icon" width="16" height="16">
-                          <use href="./images/icons.svg#icon-instagram"></use>
+                          <use href="./images/icon.svg#icon-instagram"></use>
                         </svg>
                       </a>
                     </li>
@@ -379,10 +392,11 @@
                         class="socials-link link"
                         href="https://twitter.com/"
                         rel="noopener noreferer"
+                        target="_blank"
                         aria-label="twitter"
                       >
                         <svg class="socials-icon" width="16" height="16">
-                          <use href="./images/icons.svg#icon-twitter"></use>
+                          <use href="./images/icon.svg#icon-twitter"></use>
                         </svg>
                       </a>
                     </li>
@@ -391,10 +405,11 @@
                         class="socials-link link"
                         href="https://www.facebook.com/"
                         rel="noopener noreferer"
+                        target="_blank"
                         aria-label="facebook"
                       >
                         <svg class="socials-icon" width="16" height="16">
-                          <use href="./images/icons.svg#icon-facebook"></use>
+                          <use href="./images/icon.svg#icon-facebook"></use>
                         </svg>
                       </a>
                     </li>
@@ -403,10 +418,11 @@
                         class="socials-link link"
                         href="https://www.linkedin.com/"
                         rel="noopener noreferer"
+                        target="_blank"
                         aria-label="linkedin"
                       >
                         <svg class="socials-icon" width="16" height="16">
-                          <use href="./images/icons.svg#icon-linkedin"></use>
+                          <use href="./images/icon.svg#icon-linkedin"></use>
                         </svg>
                       </a>
                     </li>
@@ -418,8 +434,9 @@
         </div>
       </div>
       <!-- Customers -->
-      <div class="customers-container container">
-        <section class="customers-section section">
+
+      <section class="customers-section section">
+        <div class="customers-container container">
           <h2 class="customers-title title">Customers</h2>
           <ul class="customers-list list">
             <li class="customers-item">
@@ -427,10 +444,11 @@
                 class="customers-link link"
                 href=""
                 rel="noopener noreferer"
+                target="_blank"
                 aria-label=""
               >
                 <svg class="customers-icon" width="104" height="56">
-                  <use href="./images/icons.svg#icon-logo1"></use>
+                  <use href="./images/icon.svg#icon-logo1"></use>
                 </svg>
               </a>
             </li>
@@ -439,10 +457,11 @@
                 class="customers-link link"
                 href=""
                 rel="noopener noreferer"
+                target="_blank"
                 aria-label=""
               >
                 <svg class="customers-icon" width="104" height="56">
-                  <use href="./images/icons.svg#icon-logo2"></use>
+                  <use href="./images/icon.svg#icon-logo2"></use>
                 </svg>
               </a>
             </li>
@@ -451,10 +470,11 @@
                 class="customers-link link"
                 href=""
                 rel="noopener noreferer"
+                target="_blank"
                 aria-label=""
               >
                 <svg class="customers-icon" width="104" height="56">
-                  <use href="./images/icons.svg#icon-logo3"></use>
+                  <use href="./images/icon.svg#icon-logo3"></use>
                 </svg>
               </a>
             </li>
@@ -463,10 +483,11 @@
                 class="customers-link link"
                 href=""
                 rel="noopener noreferer"
+                target="_blank"
                 aria-label=""
               >
                 <svg class="customers-icon" width="104" height="56">
-                  <use href="./images/icons.svg#icon-logo4"></use>
+                  <use href="./images/icon.svg#icon-logo4"></use>
                 </svg>
               </a>
             </li>
@@ -475,10 +496,11 @@
                 class="customers-link link"
                 href=""
                 rel="noopener noreferer"
+                target="_blank"
                 aria-label=""
               >
                 <svg class="customers-icon" width="104" height="56">
-                  <use href="./images/icons.svg#icon-logo5"></use>
+                  <use href="./images/icon.svg#icon-logo5"></use>
                 </svg>
               </a>
             </li>
@@ -487,21 +509,22 @@
                 class="customers-link link"
                 href=""
                 rel="noopener noreferer"
+                target="_blank"
                 aria-label=""
               >
                 <svg class="customers-icon" width="104" height="56">
-                  <use href="./images/icons.svg#icon-logo6"></use>
+                  <use href="./images/icon.svg#icon-logo6"></use>
                 </svg>
               </a>
             </li>
           </ul>
-        </section>
-      </div>
+        </div>
+      </section>
     </main>
     <!--Footer-->
     <div class="footer-wrapper">
-      <div class="footer-container container">
-        <footer class="footer-section">
+      <footer class="footer-section">
+        <div class="footer-container container">
           <div class="logo-side">
             <a class="logo-link footer-link link" href="./index.html">
               Web<span class="footer-logo">Studio</span></a
@@ -519,10 +542,11 @@
                   class="socials-link link"
                   href="https://www.instagram.com/"
                   rel="noopener noreferer"
+                  target="_blank"
                   aria-label="instagram"
                 >
-                  <svg class="socials-icon" width="16" height="16">
-                    <use href="./images/icons.svg#icon-instagram"></use>
+                  <svg class="socials-icon" width="24" height="24">
+                    <use href="./images/icon.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </li>
@@ -531,10 +555,11 @@
                   class="socials-link link"
                   href="https://twitter.com/"
                   rel="noopener noreferer"
+                  target="_blank"
                   aria-label="twitter"
                 >
-                  <svg class="socials-icon" width="16" height="16">
-                    <use href="./images/icons.svg#icon-twitter"></use>
+                  <svg class="socials-icon" width="24" height="24">
+                    <use href="./images/icon.svg#icon-twitter"></use>
                   </svg>
                 </a>
               </li>
@@ -543,10 +568,11 @@
                   class="socials-link link"
                   href="https://www.facebook.com/"
                   rel="noopener noreferer"
+                  target="_blank"
                   aria-label="facebook"
                 >
-                  <svg class="socials-icon" width="16" height="16">
-                    <use href="./images/icons.svg#icon-facebook"></use>
+                  <svg class="socials-icon" width="24" height="24">
+                    <use href="./images/icon.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
@@ -555,17 +581,18 @@
                   class="socials-link link"
                   href="https://www.linkedin.com/"
                   rel="noopener noreferer"
+                  target="_blank"
                   aria-label="linkedin"
                 >
-                  <svg class="socials-icon" width="16" height="16">
-                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  <svg class="socials-icon" width="24" height="24">
+                    <use href="./images/icon.svg#icon-linkedin"></use>
                   </svg>
                 </a>
               </li>
             </ul>
           </div>
-        </footer>
-      </div>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
