--- a/portfolio.html
+++ b/portfolio.html
@@ -244,10 +244,11 @@
                   class="socials-link link"
                   href="https://www.instagram.com/"
                   rel="noopener noreferer"
+                  target="_blank"
                   aria-label="instagram"
                 >
                   <svg class="socials-icon" width="16" height="16">
-                    <use href="./images/icons.svg#icon-instagram"></use>
+                    <use href="./images/icon.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </li>
@@ -256,10 +257,11 @@
                   class="socials-link link"
                   href="https://twitter.com/"
                   rel="noopener noreferer"
+                  target="_blank"
                   aria-label="twitter"
                 >
                   <svg class="socials-icon" width="16" height="16">
-                    <use href="./images/icons.svg#icon-twitter"></use>
+                    <use href="./images/icon.svg#icon-twitter"></use>
                   </svg>
                 </a>
               </li>
@@ -268,10 +270,11 @@
                   class="socials-link link"
                   href="https://www.facebook.com/"
                   rel="noopener noreferer"
+                  target="_blank"
                   aria-label="facebook"
                 >
                   <svg class="socials-icon" width="16" height="16">
-                    <use href="./images/icons.svg#icon-facebook"></use>
+                    <use href="./images/icon.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
@@ -280,10 +283,11 @@
                   class="socials-link link"
                   href="https://www.linkedin.com/"
                   rel="noopener noreferer"
+                  target="_blank"
                   aria-label="linkedin"
                 >
                   <svg class="socials-icon" width="16" height="16">
-                    <use href="./images/icons.svg#icon-linkedin"></use>
+                    <use href="./images/icon.svg#icon-linkedin"></use>
                   </svg>
                 </a>
               </li>
